starting the layout, adding img library

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>UltiMeme</h1>
+    
+    <header class="main-layout">
+        <h1>UltiMeme</h1>   
+    </header>
+
+    <main class="main-content main-layout flex center space-between">
+        <canvas width="300" height="300"></canvas>
+        <section class="main-controls"></section>
+
+    </main>
+
+    <footer></footer>
 
 
     <script src="js/main.js"></script>
+    <script src="js/meme-service.js"></script>
 </body>
 </html>
