--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 <body>
     
     <header class="main-layout">
-        <h1>UltiMeme</h1>   
+        <h1>UltiMeme</h1>
     </header>
 
+    <section class="serch-bar main-layout">
+        <h2>serch keyword</h2>
+    </section>
+
+    <section class="main-gallery main-layout">
+        
+    </section>
+
     <main class="main-content main-layout flex center space-between">
-        <canvas width="300" height="300"></canvas>
+        <canvas width="270" height="270"></canvas>
         <section class="main-controls"></section>
 
     </main>
