--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     </div>
     <section class="search-gallery">
         <section class="search-bar main-layout">
-            <h2>search keyword</h2>
+            <input type="text" class="img-search" name="search" placeholder="Enter search keyword"
+                onkeyup="onSearchImg()" onclick="onSearchImg()">
         </section>
         <section class="main-gallery main-layout">
             <!-- <img onclick="onChooseImg(this)" data-name="1" class="pic img-1" src="img/meme-imgs-square/1.jpg"></div>
