support in different image aspect ratios

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="clean-list align-end">
                 <!-- <ul class="clean-list flex align-end"> -->
                 <li class="gallery-li selected"><a onclick="onGoToGallery()" class="gallery-a" href="#">gallery</a></li>
-                <li><a onclick="onGoToMemes()" href="#">memes</a></li>
+                <li class="memes-li"><a onclick="onGoToMemes()" class="memes-a" href="#">memes</a></li>
                 <li><a href="#">about</a></li>
                 <i class="fa fa-camera-retro"></i>
             </ul>
