align center and sides

--- a/index.html
+++ b/index.html
@@ -48,26 +48,24 @@
                     <button class="dec-font flex align-center justify-center" onclick="onDecreaseFont()">
                         <img src="img/icons/decrease font - icon.png">
                     </button>
-                    <button class="left-align flex align-center justify-center">
+                    <button class="left-align flex align-center justify-center" onclick="onLeftAlign()">
                         <img src="img/icons/align-to-left.png">
                     </button>
-                    <button class="center-align flex align-center justify-center">
+                    <button class="center-align flex align-center justify-center" onclick="onCenterAlign()">
                         <img src="img/icons/center-text-alignment.png">
                     </button>
-                    <button class="right-align flex align-center justify-center">
+                    <button class="right-align flex align-center justify-center" onclick="onRightAlign()">
                         <img src="img/icons/align-to-right.png">
                     </button>
                 </div>
                 <div class="stickers">
                     <img src="img/stickers/1.png" class="stic-1" onclick="onAddSticker(this)">
-                    <!-- <img src="img/stickers/1.png" class="stic-1" data-url="img/stickers/agrr.png" onclick="onAddSticker(this)"> -->
                     <img src="img/stickers/2.png" class="stic-2" data-url="img/stickers/cat.png" onclick="onAddSticker(this)">
                     <img src="img/stickers/3.png" class="stic-3" data-url="img/stickers/haha.png" onclick="onAddSticker(this)">
                 </div>
                 <div class="download-share flex space-even">
                     <a href="#" class="download" onclick="onDownload(this)" download="my-img.jpg">Download</a>
                     <a href="#" class="Upload" onclick="uploadImg()">Upload and save</a>
-                    <!-- <a href="#" class="save" onclick="onSave()">Save</a> -->
                 </div>
                 <div class="share-modal-rapper" hidden>
                     <div class="share-modal" hidden>
