storage added, user can choose file and upload to the app

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <a href="#" class="download" onclick="onDownload(this)" download="my-img.jpg">Download</a>
                     <a href="#" class="Upload" onclick="uploadImg()">Upload and save</a>
                 </div>
+                
                 <div class="share-modal-rapper" hidden>
                     <div class="share-modal" hidden>
                         <div class="close-modal" onclick="closeModal()">X</div>
@@ -79,10 +80,10 @@
     </div>
     <div class="memes-rapper" hidden>
         <section class="memes main-layout flex justify-center">
-            <!-- <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
             <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
             <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
-            <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt=""> -->
+            <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
+            <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
         </section>
     </div>
     <section class="search-gallery">
@@ -109,7 +110,12 @@
                 </ul>
             </div>
         </div>
-        <section class="main-gallery main-layout"></section>
+        <div class="upload-img main-layout">
+            <input type="file" class="file-input" name="image" onchange="onImgInput(event)" />
+        </div>
+        <section class="main-gallery main-layout">
+            
+        </section>
     </section>
 
     <footer class="main-layout flex column align-center justify-center">
@@ -119,11 +125,12 @@
     </footer>
 
 
-    <script src="js/main.js"></script>
+    <script src="js/meme-utils.js"></script>
     <script src="js/mouse-events.js"></script>
+    <script src="js/storage-service.js"></script>
     <script src="js/meme-service.js"></script>
     <script src="js/upload-service.js"></script>
-    <script src="js/meme-utils.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
