fixed the layout in the memes tab

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </main>
     </div>
     <div class="memes-rapper" hidden>
-        <section class="memes main-layout flex justify-center">
+        <section class="memes main-layout">
             <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
             <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
             <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
