font from 10 - 12 and modal fixed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <!-- <ul class="clean-list flex align-end"> -->
                 <li class="gallery-li selected"><a onclick="onGoToGallery()" class="gallery-a" href="#">gallery</a></li>
                 <li class="memes-li"><a onclick="onGoToMemes()" class="memes-a" href="#">memes</a></li>
-                <li><a href="#">about</a></li>
+                <!-- <li><a href="#">about</a></li> -->
                 <i class="fa fa-camera-retro"></i>
             </ul>
         </nav>
@@ -79,12 +79,7 @@
         </main>
     </div>
     <div class="memes-rapper" hidden>
-        <section class="memes main-layout">
-            <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
-            <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
-            <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
-            <img src="http://ca-upload.com/here/img/617cf65e1e105.jpg" alt="">
-        </section>
+        <section class="memes main-layout"></section>
     </div>
     <section class="search-gallery">
         <section class="search-bar main-layout flex align-center">
